--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,17 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-analytics'
+
+    //Navigation components
+    def nav_version_ktx = "2.3.0-alpha01"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version_ktx"
+
+    //material components
+    def material_version = "1.1.0"
+    implementation "com.google.android.material:material:$material_version"
+
+    //androidx fragment
+    def fragment_version = "1.2.2"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 }
