--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     def material_version = "1.1.0"
     implementation "com.google.android.material:material:$material_version"
 
+    //circular imageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
