--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
 
+    //cloud storage
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
     //Navigation components
     def nav_version_ktx = "2.3.1"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
