--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,9 @@ dependencies {
     //cloud storage
     implementation 'com.google.firebase:firebase-storage-ktx'
 
+    //cloud firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
     //Navigation components
     def nav_version_ktx = "2.3.1"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
