--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,11 @@ dependencies {
     //circular imageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    // glide image
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // timber logs
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 }
